# Quake4Doom

./: .gitignore
src/: CMakeLists.txt
src/bse/: BSE_Effect.cpp  BSE_ParseParticle2.cpp
src/framework/: Common.cpp  KeyInput.cpp  Licensee.h  Session.cpp
src/game/: Camera.cpp  Game_local.cpp  Game_local.h
src/game/ai/: Monster_Harvester.cpp
src/game/bots/: Bot.cpp
src/game/mp/: GameState.cpp
src/game/script/: Script_Interpreter.cpp  Script_Interpreter.h
src/game/vehicle/: Vehicle.cpp
src/idlib/: Heap.cpp  Heap.h  Lib.cpp  Parser.cpp  Str.h  precompiled.h
src/idlib/math/: Curve.h  Simd.cpp
src/renderer/: Image_files.cpp  Model_lwo.cpp  qgl.h  qgl_linked.h
src/renderer/OpenGL/: gl_Image.cpp
src/sys/: sys_local.h  sys_public.h
src/sys/linux/: glimp.cpp  input.cpp  local.h  main.cpp
src/sys/posix/: posix_main.cpp
src/sys/win32/: win_main.cpp
src/tools/compilers/roqvq/: roq.h
src/ui/: Window.cpp
